<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <CheckBoxPreference
        android:key="pref_mute"
        android:title="@string/pref_mute_title"
        android:summary="@string/pref_mute_summary"
        android:defaultValue="false" 
        />
    <CheckBoxPreference
        android:key="pref_warn"
        android:title="@string/pref_warn_title"
        android:summary="@string/pref_warn_summary"
        android:defaultValue="true" 
        />
    <ListPreference
        android:key="pref_dif"
        android:title="@string/pref_dif_title"
        android:summary="@string/pref_dif_summary"
        android:entries="@array/pref_dif_labels"
        android:entryValues="@array/pref_dif_values"
        android:dialogTitle="@string/pref_dif_dialog"
        android:defaultValue="1"
        />
</PreferenceScreen>
